[metadata]
name = paho-mqtt-helper
version = 0.0.3
author = mstoffel
author_email = marco.stoffel@softwareag.com
description = helper class to connect to the mqtt broker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mstoffel-sag/paho-mqtt-helper
project_urls =
    Bug Tracker = https://github.com/mstoffel-sag/paho-mqtt-helper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = paho_mqtt_helper
packages = find:
python_requires = >=3.7

[options.packages.find]
where = paho_mqtt_helper
